update readme nav

--- a/src/common/Less/le_index.less
+++ b/src/common/Less/le_index.less
@@ -1,5 +1,7 @@
 @import './le_flex.less';
 @import './le_relative.less';
+@import './le_absolute.less';
+@import './le_fixed.less';
 
 // wh: width height
 
